<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        android:padding="16dp"
        tools:context=".view.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cb_multipleContacts"
                android:text="@string/multiple_contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_senderPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sender" />

            <EditText
                android:id="@+id/et_receiverPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/receiver"
                tools:layout_editor_absoluteX="16dp" />

            <EditText
                android:id="@+id/et_filterContactsNames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/filter"
                tools:layout_editor_absoluteX="16dp" />

            <EditText
                android:id="@+id/et_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/message"
                app:layout_constraintTop_toBottomOf="@+id/et_senderPhoneNumber" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_sendMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/send" />
        </LinearLayout>
    </FrameLayout>
</layout>